force-app/main/default/objects/Client_Member__c/Client_Member__c.object-meta.xml
<CustomObject>
    <description>This will hold all of the contacts that the client has on this one project</description>
    <label>Client Member</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Client Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>