force-app/main/default/objects/Client_Member__c/fields/Bill_to__c.field-meta.xml
<CustomField>
    <fullName>Bill_to__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked they will be the contact that will be emailed the invoice</description>
    <label>Bill to</label>
    <type>Checkbox</type>
</CustomField>